--- a/public/css/checkout.css
+++ b/public/css/checkout.css
@@ -334,3 +334,7 @@
     line-height: 22px; 
     color: var(--Color-Text-Dark);
 }
+
+.checkout_order_main .confirmation_box .order_button_box button:hover {
+    color: var(--Bg-White);
+}
